Clarify Docker stack usage and animate form

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <button id="theme-toggle" class="toggle-theme">🌞</button>
   <div class="container fade-in">
     <h1>🧮 Preisrechner</h1>
-    <form method="POST">
-      <fieldset>
+      <form method="POST">
+        <fieldset class="fade-in">
         <legend>📦 Einkaufspreis + Marge</legend>
 
         <label for="ek_brutto">💶 EK Brutto:</label>
