Explain stack deploy and polish fade-in

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 <body class="dark">
-  <button id="theme-toggle" class="toggle-theme">🌞</button>
+  <button id="theme-toggle" class="toggle-theme fade-in">🌞</button>
   <div class="container fade-in">
     <h1>🧮 Preisrechner</h1>
       <form method="POST">
